Hook video list and video player together

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <script>
     backboneReady(() => {
-      new AppView({el: $('#app')}).render();
+      new AppView();
     });
   </script>
 
